# game-engine-engine

./: .gitignore  AssimpLog.txt  CMakeLists.txt  README.md  Settings.ini  conanfile.txt  example_8_ball_pool.exp  example_8_ball_pool.lib  game-engine-engine.exp  game-engine-engine.lib  game-engine-engine.sln  game-engine-engine.vcxproj  game-engine-engine.vcxproj.filters  icon.rc  old_overdraw.hdr  old_overdraw_worst.hdr  oldcmklists.txt  ovedraw.hdr  overdraw.hdr  overdraw_normal.hdr  packages.config  profiling-13b-minimised-for-some-reason.txt  profiling-18b-sure.txt  profiling-23b-sure.txt  profiling-27b-unsure.txt  profiling-32b-unsure.txt  profiling-32w-forward.txt  profiling-36b-broken-part.txt  profiling-36b-unsure.txt  profiling-36w-broken-part.txt  profiling-40b-broken-part.txt  profiling.txt  recent.txt  sad  swetroniusz  — skrót.lnk
Assets/EngineMaterials/: Materials.fware  marble_normal.tif
Assets/navmeshtest/: navmeshtest.blend  navmeshtest.mtl
LibraryRelease/game-eng.9668F435.tlog/: CL.write.1.tlog
Projects/: Ethan Beaver.json  MarcusStuder.json  Proadsadject1.json  Project1.json  Project1sdsafasfsaf.json  Project1sdsd.json  Super Tom.json  UIFix.json  best 9 rooms.json  bug.json  lambda.json  naturetest.json  navmehtest.json  smaafix.json  spaceship.json  sponza.json  treetest123.json  vstest1.json  zjebalosie.json
Projects/Animacje/: Animacje_backup.json
Projects/Chess/: Chess.json
Projects/Extended Essay/: Diagram.json  Sponza — backup.json  Sponza-Overdraw — backup.json  Sponza-Overdraw.json  Sponza.json  profiling_thirtyone_after_score_graph_creation.txt
Projects/Extended Essay/Before RQ shift/: Worst 1 room.json
Projects/Extended Essay/Lights test/: Eighteen-B.json  Eighteen-W.json  Five-B.json  Five-W.json  Forty-B.json  Fourteen-B.json  Fourteen-W.json  Nine-B.json  Nine-W.json  One-B.json  One-W.json  ThirtyOne-W.json  ThirtySix-B.json  ThirtySix-W.json  ThirtyTwo-B.json  ThirtyTwo-W.json  TwentySeven-B.json  TwentySeven-W.json  TwentyThree-B.json  TwentyThree-W.json
Projects/First level/: level_old.geeprojectold
Projects/Rehab/: Rehab-backup.json  Rehab.json
Projects/example_8_ball_pool/: CMakeLists.txt  broken_colobj.json  example_8_ball_pool-backup.json  example_8_ball_pool.json  example_8_ball_pool_backup.json  example_8_ball_pool_newer_backup.json
Shaders/: brdfLutGeneration.fs  brdfLutGeneration.vs  cubemap.fs  cubemap.vs  depth.fs  depth.vs  depth_linearize.fs  forward_nolight.fs  forward_pbrCookTorrance.fs  geometry.fs  geometry.vs  pbrCookTorrance.fs  shadowMapVisualisation.fs  shadowMapVisualisation.vs  text.fs
Shaders/SMAA/: blend.fs  blend.vs  neighborhood.vs
Shaders/UI/: grid.fs  grid.vs
Single room/: forward 1.txt  forward 2.txt
Source/: .json  Actor.cpp  Actor.h  Animation.cpp  Animation.h  AudioEngine.cpp  AudioEngine.h  BoneComponent.cpp  BoneComponent.h  ButtonActor.cpp  ButtonActor.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  Collision.cpp  Collision.h  CollisionEngine.cpp  CollisionEngine.h  CollisionObject.cpp  CollisionObject.h  Component.cpp  Component.h  Controller.cpp  Controller.h  Cube.fware  Event.cpp  Event.h  FileLoader.cpp  FileLoader.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  Game.cpp  Game.h  GameManager.h  GameScene.cpp  GameScene.h  GameSettings.cpp  GameSettings.h  (+112 more)
Source/Argon/: README
Source/DebuggingProjects/: blad-z-point-light.json  whats-up.json
Source/EditorAssets/: component_icon.xcf
Source/EngineMaterials/: Cube.fware  Materials.fware
Source/Licences/: copyright.txt
Source/Project1/: eluwina-jou.json
Source/Project2/: project-2.json
Source/Projects/: Project1.json  bug.json  pomocy.json  pomocy2.json  sponza.json  test.json  zamianka.json
Source/SMAA/: blend.fs  blend.vs  edge.fs  edge.vs  neighborhood.fs  neighborhood.vs  reproject.fs  reproject.vs
Source/Shaders/: brdfLutGeneration.vs  cubemap.fs  cubemap.vs  debug.fs  debug.vs  default.fs  default.vs  depth.vs  depth_linearize.fs  depth_linearize.vs  directional.fs  directional.vs  directional_ssao.fs  forward_nolight.fs  forward_nolight.vs  forward_pbrCookTorrance.fs  forward_pbrCookTorrance.vs  gaussianblur.fs  gaussianblur.vs  geometry.fs  geometry.vs  irradianceCubemap.fs  irradianceCubemap.vs  pbrCookTorrance.fs  pbrCookTorrance.vs  phong.fs  phong.vs  point.fs  point.vs  point_ssao.fs  postprocess.fs  prefilterCubemap.fs  quad.fs  quad.vs  spot.fs  spot.vs  ssao.fs  ssao.vs  text.fs  text.vs  (+2 more)
Source/Wielki turniej szachowy/: podium.json  podium.json.json  podium.json.json.json
Source/alphamap/: alphamap.fbx  alphamap_inferior.blend  alphamap_inferior.blend1
Source/christmas/: tree.blend  tree.blend1  tree.fbx
Source/doublebarrel/: doublebarrel.blend  doublebarrel.blend1  doublebarrel.dae  doublebarrel.fbx  doublebarrel2.mtl
Source/firemodel/: firemodel.mtl
Source/hackergun/: hackergun.blend  hackergun.blend1
Source/hqSphere/: hqSphere.mtl
Source/include/: ft2build.h
Source/janusz/: janusz.glb
Source/nanosuit/: nanosuit.mtl
Source/source/: glad.c  whereami.c
Source/subway/: subway.mtl
Source/tunnel/: tunnel.blend
Source/warehouse/: warehouse.glb  warehouse.mtl
profiling/: Deferred Avg 1 9 rooms.txt  Deferred Avg 2 9 rooms.txt  Deferred Worst 1 21-9.txt  Deferred Worst 1 5-9.txt  Deferred Worst 1 9 rooms 1 light.txt  Deferred Worst 1 9 rooms.txt  Deferred Worst 2 5-9.txt  Deferred Worst 2 9 rooms 1 light (unconverted still).txt  Deferred Worst 2 9 rooms.txt  Deferred Worst 3 9 rooms 1 light (unconverted still).txt  Forward Avg 1 9 rooms.txt  Forward Avg 2 9 rooms.txt  Forward Worst 1 5-9.txt  Forward Worst 1 9 rooms.txt  Forward Worst 2 5-9.txt  Forward Worst 2 9 rooms.txt  different deferred worst single room.txt  forward worst single 1 room.txt  profiling 9 rooms forward test.txt  profiling.txt  some old prof.txt  test 9 rooms.txt  worst signle room forward.txt  worst single room deferred.txt
profiling/seedless/: dropping gpu clocks showcase.txt  profiling_deferred_avg 9 rooms.txt  profiling_deferred_avg_2 9 rooms.txt
src/src/: main.cpp
(+386 files in other folders)
